--- a/ntu.xzmcwjzs.BLL/ntu.xzmcwjzs.BLL.csproj
+++ b/ntu.xzmcwjzs.BLL/ntu.xzmcwjzs.BLL.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>ec7cacd2-bf15-49cd-99bb-4ebfd1cb763d</ProjectGuid>
+    <ProjectGuid>{EC7CACD2-BF15-49CD-99BB-4EBFD1CB763D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ntu.xzmcwjzs.BLL</RootNamespace>
@@ -30,24 +30,41 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BaseService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\TestService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ntu.xzmcwjzs.Common\ntu.xzmcwjzs.Common.csproj">
+      <Project>{aec92432-d8bd-4df1-9256-39748d0fb6c0}</Project>
+      <Name>ntu.xzmcwjzs.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ntu.xzmcwjzs.DALSessionFactory\ntu.xzmcwjzs.DALSessionFactory.csproj">
+      <Project>{6d06f944-119c-4c00-b487-4f0af640aaea}</Project>
+      <Name>ntu.xzmcwjzs.DALSessionFactory</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ntu.xzmcwjzs.IBLL\ntu.xzmcwjzs.IBLL.csproj">
+      <Project>{11df9826-60f8-4387-8c56-27ceb409c94b}</Project>
+      <Name>ntu.xzmcwjzs.IBLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ntu.xzmcwjzs.IDAL\ntu.xzmcwjzs.IDAL.csproj">
+      <Project>{ffc838cb-e8bd-4465-991f-82dcc1bd30a7}</Project>
+      <Name>ntu.xzmcwjzs.IDAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ntu.xzmcwjzs.Model\ntu.xzmcwjzs.Model.csproj">
+      <Project>{60c82364-fcd9-4879-9053-61f6b47adcf5}</Project>
+      <Name>ntu.xzmcwjzs.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -57,5 +74,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-
- </Project>
+</Project>
