--- a/ntu.xzmcwjzs.DapperDAL/ntu.xzmcwjzs.DapperDAL.csproj
+++ b/ntu.xzmcwjzs.DapperDAL/ntu.xzmcwjzs.DapperDAL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AE7F039F-0E2C-455F-8EC8-0355B4BBA5D8}</ProjectGuid>
+    <ProjectGuid>{B1145E5C-CDAB-4BD6-8884-1E1573BC4BE5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ntu.xzmcwjzs.DAL</RootNamespace>
-    <AssemblyName>ntu.xzmcwjzs.DAL</AssemblyName>
+    <RootNamespace>ntu.xzmcwjzs.DapperDAL</RootNamespace>
+    <AssemblyName>ntu.xzmcwjzs.DapperDAL</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,11 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,25 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbstractFactory.cs" />
-    <Compile Include="BaseRepository.cs" />
-    <Compile Include="DbContextFactory.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\TestRepository.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ntu.xzmcwjzs.IDAL\ntu.xzmcwjzs.IDAL.csproj">
-      <Project>{ffc838cb-e8bd-4465-991f-82dcc1bd30a7}</Project>
-      <Name>ntu.xzmcwjzs.IDAL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ntu.xzmcwjzs.Ioc\ntu.xzmcwjzs.Ioc.csproj">
-      <Project>{40ba43e8-d6e2-40ea-afaa-81d2f82d3ab4}</Project>
-      <Name>ntu.xzmcwjzs.Ioc</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ntu.xzmcwjzs.Model\ntu.xzmcwjzs.Model.csproj">
-      <Project>{60c82364-fcd9-4879-9053-61f6b47adcf5}</Project>
-      <Name>ntu.xzmcwjzs.Model</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
