--- a/ntu.xzmcwjzs.WebApp.Tests/ntu.xzmcwjzs.WebApp.Tests.csproj
+++ b/ntu.xzmcwjzs.WebApp.Tests/ntu.xzmcwjzs.WebApp.Tests.csproj
@@ -83,7 +83,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -96,6 +95,9 @@
       <Project>{699C6099-4201-4970-B041-4812A4DF432A}</Project>
       <Name>ntu.xzmcwjzs.WebApp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
