--- a/ntu.xzmcwjzs.Model/ntu.xzmcwjzs.Model.csproj
+++ b/ntu.xzmcwjzs.Model/ntu.xzmcwjzs.Model.csproj
@@ -61,7 +61,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ClassNameTxt\" />
     <Folder Include="Enum\" />
     <Folder Include="SearchParam\" />
     <Folder Include="ViewModel\" />
@@ -69,6 +68,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ClassNameTxt\ClassName.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
