--- a/ntu.xzmcwjzs.WebApp/Web.config
+++ b/ntu.xzmcwjzs.WebApp/Web.config
@@ -7,7 +7,44 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!--Log4net的块配置-->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
+
+  <!--Log4net配置的节点-->
+  <log4net>
+    <!-- OFF, FATAL, ERROR, WARN, INFO, DEBUG, ALL -->
+    <!-- Set root logger level to ERROR and its appenders -->
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="SysAppender" />
+    </root>
+
+    <!-- Print only messages of level DEBUG or above in the packages -->
+    <logger name="XZMCWJZS">
+      <level value="ERROR" />
+    </logger>
+
+    <appender name="SysAppender" type="log4net.Appender.RollingFileAppender,log4net">
+      <param name="File" value="App_Data/" />
+      <param name="AppendToFile" value="true" />
+      <param name="MaxSizeRollBackups" value="10"/>
+      <param name="RollingStyle" value="Date" />
+      <param name="DatePattern" value="&quot;Logs_&quot;yyyyMMdd&quot;.txt&quot;" />
+      <param name="StaticLogFileName" value="false" />
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+        <param name="Header" value="&#xD;&#xA;----------------------日志开始--------------------------&#xD;&#xA;" />
+        <param name="Footer" value="&#xD;&#xA;----------------------日志结束--------------------------&#xD;&#xA;" />
+      </layout>
+    </appender>
+    <appender name="consoleApp" type="log4net.Appender.ConsoleAppender,log4net">
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+      </layout>
+    </appender>
+  </log4net>
+  
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ntu.xzmcwjzs.WebApp-20170315104816.mdf;Initial Catalog=aspnet-ntu.xzmcwjzs.WebApp-20170315104816;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="XZMCWJZSContext" connectionString="server=.;database=XZMCWJZS;integrated security=true;MultipleActiveResultSets=True;App=EntityFramework;" providerName="System.Data.SqlClient" />
