--- a/ntu.xzmcwjzs.WebApp/Web.config
+++ b/ntu.xzmcwjzs.WebApp/Web.config
@@ -48,6 +48,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ntu.xzmcwjzs.WebApp-20170315104816.mdf;Initial Catalog=aspnet-ntu.xzmcwjzs.WebApp-20170315104816;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="XZMCWJZSContext" connectionString="server=.;database=XZMCWJZS;integrated security=true;MultipleActiveResultSets=True;App=EntityFramework;" providerName="System.Data.SqlClient" />
+    <add name="XZMCWJZS" connectionString="server=.;database=XZMCWJZS;integrated security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
