--- a/ntu.xzmcwjzs.WebApp/ntu.xzmcwjzs.WebApp.csproj
+++ b/ntu.xzmcwjzs.WebApp/ntu.xzmcwjzs.WebApp.csproj
@@ -196,8 +196,11 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Common\LuceneHelper\FenCiHelper.cs" />
+    <Compile Include="Common\LuceneHelper\IndexManager.cs" />
     <Compile Include="Common\MyAttributes\MyExceptionAttribute.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -227,6 +230,23 @@
     </Content>
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-bg_diagonals-thick_18_b81900_40x40.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-bg_diagonals-thick_20_666666_40x40.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-bg_flat_10_000000_40x100.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-bg_glass_100_f6f6f6_1x400.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-bg_glass_100_fdf5ce_1x400.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-bg_gloss-wave_35_f6a828_500x100.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-bg_highlight-soft_100_eeeeee_1x100.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-bg_highlight-soft_75_ffe45c_1x100.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-icons_222222_256x240.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-icons_228ef1_256x240.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-icons_ef8c08_256x240.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-icons_ffd27a_256x240.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="Scripts\Autocomplete\css\ui-lightness\jquery-ui-1.8.17.custom.css" />
+    <Content Include="Scripts\Autocomplete\js\jquery-ui-1.8.17.custom.min.js" />
+    <Content Include="Scripts\Autocomplete\js\jquery-ui-widget-combobox.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Dict\Dict.dct">
@@ -256,6 +276,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Test\Index.cshtml" />
+    <Content Include="Views\Search\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
