简易版站内搜索+热词统计

--- a/ntu.xzmcwjzs.WebApp/Web.config
+++ b/ntu.xzmcwjzs.WebApp/Web.config
@@ -60,6 +60,8 @@
     <!--配置程序集名称和命名空间名称-->
     <add key="AssemblyPath" value="ntu.xzmcwjzs.DAL" />
     <add key="NameSpacePath" value="ntu.xzmcwjzs.DAL" />
+    <!--配置lucene索引目录-->
+    <add key="Lucenedir" value="C:\Lucenedir" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
