--- a/ntu.xzmcwjzs.BLL/ntu.xzmcwjzs.BLL.csproj
+++ b/ntu.xzmcwjzs.BLL/ntu.xzmcwjzs.BLL.csproj
@@ -50,6 +50,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
+    <Compile Include="Services\SysModuleService.cs" />
     <Compile Include="Services\TestService.cs" />
   </ItemGroup>
   <ItemGroup>
