--- a/ntu.xzmcwjzs.Common/ntu.xzmcwjzs.Common.csproj
+++ b/ntu.xzmcwjzs.Common/ntu.xzmcwjzs.Common.csproj
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net">
-      <HintPath>..\packages\MyDLL\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -48,12 +45,10 @@
     <Compile Include="CommonFunc.cs" />
     <Compile Include="GridPager.cs" />
     <Compile Include="JsonHelper.cs" />
-    <Compile Include="Log\ILogWriter.cs" />
-    <Compile Include="Log\Log4NetWriter.cs" />
-    <Compile Include="Log\LogHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegexHelper.cs" />
     <Compile Include="SessionHelper.cs" />
+    <Compile Include="Suggestion.cs" />
     <Compile Include="ToolsHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
