--- a/ntu.xzmcwjzs.WebApp/ntu.xzmcwjzs.WebApp.csproj
+++ b/ntu.xzmcwjzs.WebApp/ntu.xzmcwjzs.WebApp.csproj
@@ -395,6 +395,7 @@
     <Content Include="Content\Images\sunny\Logo.psd" />
     <Content Include="Content\Images\sunny\未标题-1.psd" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
+    <Content Include="Scripts\datapattern.js" />
     <Content Include="Scripts\home.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
     <Content Include="Scripts\jquery-1.12.4.min.js" />
@@ -436,6 +437,74 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\wdtree\jquery.tree.js" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\add.png" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\addStep.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\addStep_dsbl.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\btn-arrow.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\Btn.Close.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\Btn.Refresh.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\cal.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\checkbox_0.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\checkbox_1.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\checkbox_2.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\circle_animation.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\delete.png" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\delItem.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\delItem_dsbl.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\edit.png" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\folder_close.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\ico1.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\ico2.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\ico3.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\ico4-1-1.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\ico4-1.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\ico4-2.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\ico4-3.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\ico4-4.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\ico4.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\ico5.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\ico6-1.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\ico6-2.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\ico6.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\indicator.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\information.png" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\Item.Add.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\Item.Delete.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\Item.Edit.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\Item.Input.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\Item.Save.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\Item.Search.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\none.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\note.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\rowdelete.png" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\s.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\table_refresh.png" />
+    <Content Include="Scripts\wdtree\tree\css\images\icons\view.png" />
+    <Content Include="Scripts\wdtree\tree\css\images\share\glass-bg.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\share\hd-sprite.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\share\left-btn.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\share\right-btn.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\share\tool-sprites.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\arrows.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\cbs.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\drop-yes.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\elbow-end-minus-nl.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\elbow-end-minus.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\elbow-end-plus-nl.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\elbow-end-plus.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\elbow-end.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\elbow-line.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\elbow-minus-nl.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\elbow-minus.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\elbow-plus-nl.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\elbow-plus.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\elbow.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\folder-open.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\folder.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\leaf.gif" />
+    <Content Include="Scripts\wdtree\tree\css\images\tree\loading.gif" />
+    <Content Include="Scripts\wdtree\tree\css\tree.css" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -456,6 +525,8 @@
     <Content Include="Views\Test\Index.cshtml" />
     <Content Include="Views\Shared\_Index_LayoutEdit.cshtml" />
     <Content Include="Views\Test\Create.cshtml" />
+    <Content Include="Views\Test\Edit.cshtml" />
+    <Content Include="Views\Test\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
