异步加载easiui中树形结构

--- a/ntu.xzmcwjzs.Model/ntu.xzmcwjzs.Model.csproj
+++ b/ntu.xzmcwjzs.Model/ntu.xzmcwjzs.Model.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\FenCiViewModel.cs" />
+    <Compile Include="ViewModel\TreeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ntu.xzmcwjzs.Common\ntu.xzmcwjzs.Common.csproj">
