--- a/WindowsFormsApplicationDemo/App.config
+++ b/WindowsFormsApplicationDemo/App.config
@@ -5,6 +5,7 @@
     </startup>
   <connectionStrings>
     <add name="MongoServerSettings" connectionString="mongodb://127.0.0.1:27017/demo"/>
+    <add name="XZMCWJZSADO" connectionString="server=.;database=XZMCWJZS;integrated security=true;Max Pool Size=1024;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings> 
     <add key="MongoServerSettings" value="mongodb://127.0.0.1:27017/demo"/>
